Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7770

conf-sanity test_50b: Error: 'lazystatfs should not return EIO'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • Lustre 2.12.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Bob Glossman <bob.glossman@intel.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/4893c48c-cfc1-11e5-b6bd-5254006e85c2.

      The sub-test test_50b failed with the following error:

      lazystatfs should not return EIO
      

      Please provide additional information about the failure here.

      Info required for matching: conf-sanity 50b

            bzzz Alex Zhuravlev
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: